# poc-amplifier

./: README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  bt_app_av.c  bt_app_av.h  bt_app_core.c  main.c
main/amplifier/: tpa3255.c  tpa3255.h
main/codec/: tad5212.c  tad5212.h  tad5212_biquad_filters.h  tad5212_default_config.h  tad5212_defines.h  tad5212_mixer.h
main/codec/configurations/: tad5212_common_config.h  tad5212_subwoofer_config.h
main/codec/registers/: tad5212_regs_page_0.h  tad5212_regs_page_1.h  tad5212_regs_page_15.h  tad5212_regs_page_16.h  tad5212_regs_page_17.h
